# rust-starter

./: readme.md
1-hello-world/: first.rs
basics/: .gitignore
exercise_test/: Cargo.toml
exercise_test/src/: main.rs  var.rs
restapi-actix/: Cargo.toml
restapi-actix/src/: main.rs
src/: main.rs  woo.rs
tebak_angka/: Cargo.toml
tebak_angka/src/: main.rs
user-api/: .env  Cargo.toml
user-api/src/: main.rs
user-api/src/application/: user_service.rs
user-api/src/domain/: repository.rs  service.rs
user-api/src/domain/entity/: user.rs
user-api/src/infrastructure/http/: user_handler.rs
user-api/src/infrastructure/persistence/: mod.rs  user_repository_pg.rs
